@@ -2,15 +2,15 @@
 
 <!-- $Id$ -->
 <binding package="org.dellroad.jibxbindings.pidf" xmlns:pidf="urn:ietf:params:xml:ns:pidf">
-    <include path="tuple.xml"/>
+    <include path="component.xml"/>
     <include path="langContent.xml"/>
     <mapping abstract="true" type-name="pidf:presence" class="org.dellroad.jibxbindings.pidf.Presence">
         <namespace uri="urn:ietf:params:xml:ns:pidf" default="elements" prefix="pidf"/>
         <value name="entity" field="entity" style="attribute"
           serializer="org.dellroad.jibxbindings.ParseUtil.serializeURI"
           deserializer="org.dellroad.jibxbindings.ParseUtil.deserializeURI"/>
-        <collection field="tuples" create-type="java.util.ArrayList">
-            <structure name="tuple" map-as="pidf:tuple"/>
+        <collection field="components" create-type="java.util.ArrayList">
+            <structure map-as="org.dellroad.jibxbindings.pidf.Component"/>
         </collection>
         <collection field="notes" create-type="java.util.ArrayList">
             <structure name="note" map-as="pidf:langContent"/>
